# RandD

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Makefile  README.md  TASKS.md  package-lock.json  package.json  randd-fixes.patch
.github/workflows/: ci.yml
Escapia/: escapia_consolidated_documentation.html  escapia_hsapi_swagger2.json  escapia_openapi3.json  escapia_openapi3.yaml
apps/agent/: pyproject.toml
apps/agent/src/strqc_agent/: __init__.py  assemble.py  console.py  context.py  guardrails.py  persona.py
apps/agent/src/strqc_agent/tools/: __init__.py  camera.py  journal.py  property_info.py  slack_delivery.py  stages.py  work_orders.py
apps/agent/tests/: conftest.py  test_assemble.py  test_delivery.py  test_guardrails.py  test_tools.py
apps/api/: pyproject.toml
apps/api/src/strqc_api/: __init__.py
apps/api/src/strqc_api/escapia/: __init__.py  auth.py  client.py  endpoints.py  scheduler.py  sync.py
apps/api/tests/escapia/: conftest.py  test_auth_and_client.py  test_housekeeping_workorders.py  test_scheduler.py  test_sync_reservations.py  test_sync_units_owners.py
backend/: .env.example  README.md  requirements.txt
backend/app/: __init__.py  agent.py  approval_registry.py  approval_tools.py  auth.py  browser_camera.py  camera_control.py  csv_import.py  escapia_read.py  evidence_storage.py  field_api.py  gmail_attachments.py  inventory_tools.py  io.py  kb_archive.py  main.py  memory.py  memory_namespace.py  prompts.py  properties.py  qc_journal.py  (+9 more)
docs/: phase1_architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: migrate_phase1.py  seed_auth.py  setup_remote_ec2.sh  slack_reinstall.py
sql/: inspection_reports.sql  phase1_schema.sql
(+89 files in other folders)
