[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strqc-agent"
version = "0.1.0"
description = "STR QC platform — the field agent (Gemini Live via Strands BIDI)"
requires-python = ">=3.12"
# strands-agents is installed separately as an editable/vendored dependency:
#   pip install -e harness-sdk/strands-py
dependencies = [
    "strqc-shared",
    "strqc-db",
    "google-genai>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strqc_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
